--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,8 @@ repo_name: ArtificialAnalysis/Stirrup
 
 theme:
   name: material
+  favicon: assets/favicon.ico
+  logo: assets/logo.png
   features:
     - content.code.copy
     - content.code.annotate
@@ -27,6 +29,9 @@ theme:
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
+
+extra_css:
+  - assets/extra.css
 
 markdown_extensions:
   - pymdownx.highlight:
