feat: update full customization docs (#2)
* update full customization docs

* update documentation url to artificial analysis sub domain

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -87,7 +87,7 @@ nav:
       - Custom Tools: extending/tools.md
       - Custom Loggers: extending/loggers.md
       - Custom Backends: extending/code_backends.md
-      - Local Development: extending/local-development.md
+      - Full Customization: extending/full-customization.md
   - API Reference:
       - Core:
           - Agent: api/core/agent.md
